Design Issues Fixing

--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -27,6 +27,7 @@
 						  [isEdit]="false"
 						  [isContactIcon]="false"
 						  [isResume]="true"
+						  [isMatchesShow]="true"
 						  [isMultipleMatches]="isMultipleMatches"
 						  [isMatchesView]="false">
 						</app-contact-card>
