--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -801,83 +801,7 @@
 					</li>
 				</ul>
 			</div>
-		</div>				
-		<!-- <div class="row info-box">
-			<div class="col-lg-3 caption">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize m-0">{{"postJob.remote" | translate}}</li>
-				</ul>
-			</div>
-			<div class="col-lg-5 info">
-				<ul class="list-group">
-					<li class="list-group-item">{{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.remote)}}</li>
-				</ul>
-			</div>
-			<div class="col-lg-4">
-				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (click)="handleChange($event)"    value="0"  id="customRadio22A" name="remote" formControlName="remote"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio22A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (click)="handleChange($event)"    value="1"  id="customRadio22B" name="remote" formControlName="remote"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio22B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio" (click)="handleChange($event)"    value="2"  id="customRadio22C" name="remote" formControlName="remote"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio22C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>					
-		<div class="row info-box">
-			<div class="col-lg-3 caption">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize m-0">{{"postJob.relocate" | translate}}</li>
-				</ul>
-			</div>
-			<div class="col-lg-5 info">
-				<ul class="list-group">
-					<li class="list-group-item">{{onGetYesOrNoValue(postJobForm?.value?.jobInfo?.willing_to_relocate)}}</li>
-				</ul>
-			</div>
-			<div class="col-lg-4">
-				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (click)="handleChange($event)"    value="0"  id="customRadio220A" name="willing_to_relocate" formControlName="willing_to_relocate"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio220A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (click)="handleChange($event)"    value="1"  id="customRadio220B" name="willing_to_relocate" formControlName="willing_to_relocate"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio220B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio" (click)="handleChange($event)"    value="2"  id="customRadio220C" name="willing_to_relocate" formControlName="willing_to_relocate"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio220C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>				 -->
+		</div>		
 		<div class="row info-box">
 			<div class="col-lg-3 caption">
 				<ul class="list-group">
@@ -935,19 +859,19 @@
 							<div class="d-flex">
 								<div class="rdn-radio">
 									<div class="custom-control custom-radio">
-										<input type="radio" (click)="handleChange($event)"    value="0"  id="{{others?.id}}A" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input" >
+										<input type="radio" (click)="handleChanges($event)"    value="0"  id="{{others?.id}}A" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input" >
 										<label class="custom-control-label" for="{{others?.id}}A">&nbsp;</label>
 									</div>
 								 </div>
 								 <div class="rdn-radio">
 									<div class="custom-control custom-radio">
-										<input type="radio"  (click)="handleChange($event)"    value="1"  id="{{others?.id}}B" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input">
+										<input type="radio"  (click)="handleChanges($event)"    value="1"  id="{{others?.id}}B" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input">
 										<label class="custom-control-label" for="{{others?.id}}B">&nbsp;</label>
 									</div>
 								 </div>
 								 <div class="rdn-radio">
 									<div class="custom-control custom-radio">
-									  <input type="radio" (click)="handleChange($event)"    value="2"  id="{{others?.id}}C" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input">
+									  <input type="radio" (click)="handleChanges($event)"    value="2"  id="{{others?.id}}C" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input">
 									  <label class="custom-control-label" for="{{others?.id}}C">&nbsp;</label>
 									</div>
 								</div>
@@ -957,46 +881,7 @@
 				</div>
 			</div>
 		</ng-container>	
-		<ng-container *ngIf="childForm?.value?.otherPref?.extra_criteria?.length > 0  && isShow">
-			<div class="row info-box" *ngFor="let extra_criteria of childForm?.value?.otherPref?.extra_criteria; let i = index">
-				<div class="col-lg-3 caption">
-					<ul class="list-group">
-						<li class="list-group-item text-capitalize">{{extra_criteria?.title}}</li>
-					</ul>
-				</div>
-				<div class="col-lg-5 info">
-					<ul class="list-group">
-						<li class="list-group-item text-capitalize">{{extra_criteria?.value}}</li>
-					</ul>
-				</div>
-				<div class="col-lg-4" >
-					<ul class="list-group">
-						<li class="list-group-item border-0 p-0 m-0 ">							
-							<div class="d-flex">
-								<div class="rdn-radio">
-									<div class="custom-control custom-radio">
-										<input type="radio" (click)="handleChanges($event)"    value="0"  id="{{extra_criteria?.title}}A" name="{{extra_criteria?.title}}" formControlName="{{extra_criteria?.title}}"  class="custom-control-input" >
-										<label class="custom-control-label" for="{{extra_criteria?.title}}A">&nbsp;</label>
-									</div>
-								 </div>
-								 <div class="rdn-radio">
-									<div class="custom-control custom-radio">
-										<input type="radio"  (click)="handleChanges($event)"    value="1"  id="{{extra_criteria?.title}}B" name="{{extra_criteria?.title}}" formControlName="{{extra_criteria?.title}}"  class="custom-control-input">
-										<label class="custom-control-label" for="{{extra_criteria?.title}}B">&nbsp;</label>
-									</div>
-								 </div>
-								 <div class="rdn-radio">
-									<div class="custom-control custom-radio">
-									  <input type="radio" (click)="handleChanges($event)"    value="2"  id="{{extra_criteria?.title}}C" name="{{extra_criteria?.title}}" formControlName="{{extra_criteria?.title}}"  class="custom-control-input">
-									  <label class="custom-control-label" for="{{extra_criteria?.title}}C">&nbsp;</label>
-									</div>
-								</div>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</ng-container>		
+			
 		</div>		
 		
 		<div class="col-lg-12 border-top pt-3"> </div>
@@ -1181,40 +1066,7 @@
 			</div>
 	
 			</div>
-			<div class="modal-body"  *ngIf="clientfacing">
-				<div class="col-lg-12 col-md-12" formGroupName="otherPref" >
-					<div class=" form-group">
-						<label class="font-weight-bold" >Client Facing Role  </label>
-						 <div class="mt-2">
-							 <div class="custom-control custom-radio custom-control-inline">
-								  <input type="radio" id="customRadioInline55"  value="0" formControlName="facing_role" name="facing_role" class="custom-control-input">
-								  <label class="custom-control-label" for="customRadioInline55">Required</label>
-							</div>
-							<div class="custom-control custom-radio custom-control-inline">
-								<input type="radio" id="customRadioInline66"  value="1" formControlName="facing_role" name="facing_role"  class="custom-control-input">
-								<label class="custom-control-label" for="customRadioInline66">Not Required</label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="modal-body"  *ngIf="training">
-				<div class="col-lg-12 col-md-12" formGroupName="otherPref" >
-					<div class=" form-group">
-						<label class="font-weight-bold" >Training Experience   </label>
-						 <div class="mt-2">
-							 <div class="custom-control custom-radio custom-control-inline">
-								  <input type="radio" id="customRadioInline555"  value="0" formControlName="training_experience" name="training_experience" class="custom-control-input">
-								  <label class="custom-control-label" for="customRadioInline555">Required</label>
-							</div>
-							<div class="custom-control custom-radio custom-control-inline">
-								<input type="radio" id="customRadioInline666"  value="1" formControlName="training_experience" name="training_experience"  class="custom-control-input">
-								<label class="custom-control-label" for="customRadioInline666">Not Required</label>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 			
 		<div class="modal-footer">
 			<button (click)="closeAdd()" type="button" class="btn btn-theme-orange">
