--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -1,43 +1,5 @@
 <div formGroupName="otherPref">
-	<!-- <div class="row mt-5">	
-		<div class="col-lg-4 col-md-6">
-			<div class=" form-group">
-				<label class="font-weight-bold" >Client Facing Role  </label>
-				 <div class="mt-2">
-					 <div class="custom-control custom-radio custom-control-inline">
-						  <input type="radio" id="customRadioInline5"  value="0" formControlName="facing_role" name="facing_role" class="custom-control-input">
-						  <label class="custom-control-label" for="customRadioInline5">Required</label>
-					</div>
-					<div class="custom-control custom-radio custom-control-inline">
-						<input type="radio" id="customRadioInline6"  value="1" formControlName="facing_role" name="facing_role"  class="custom-control-input">
-						<label class="custom-control-label" for="customRadioInline6">Not Required</label>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>							
-	<div class="row mt-4">	
-		<div class="col-lg-4 col-md-6">
-			<div class=" form-group">
-				<label class="font-weight-bold" >Training Experience </label>
-				<div class="mt-2">
-					<div class="custom-control custom-radio custom-control-inline">
-						<input type="radio" value="0" formControlName="training_experience" id="customRadioInline7" name="training_experience" class="custom-control-input">
-						<label class="custom-control-label" for="customRadioInline7">Required</label>
-					</div>
-					<div class="custom-control custom-radio custom-control-inline">
-						<input type="radio" value="1" formControlName="training_experience" id="customRadioInline8" name="training_experience" class="custom-control-input">
-						<label class="custom-control-label" for="customRadioInline8">Not Required</label>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<div class="row mt-2">
-		<div class="col-lg-12 col-md-6">
-			<label class="font-weight-bold">Custom Requirements</label>
-			<div ></div>
-		</div>
+	<div class="mt-5">
 	</div>
 	<div class="row mt-2" *ngFor="let ticket of others.controls; let i = index; let last = last">
 		<ng-container [formGroup]="ticket">
@@ -55,15 +17,14 @@
 			</div>
 		</ng-container>
 	</div>
-	<div class="row mt-2">
-		<div class="col-lg-12 col-md-6">
-			<label class="font-weight-bold">Add Custom Requirements </label>
-			<div ></div>
-		</div>
-	</div>
 	<div class="row mt-2" >
+		<div class="col-lg-12 col-md-12">
+		<div class=" mt-2">
+			<label style="margin-bottom:0px;" class="font-weight-bold">Add Custom Requirements </label>	
+		</div>
+		</div>
 		<div class="col-lg-5 col-md-4">
-			<input formControlName="others_data" maxlength="100" class="form-control mt-4" type="text" placeholder="Ex. Should work in CET Zone">
+			<input formControlName="others_data" maxlength="100" class="form-control mt-4 " type="text" placeholder="Ex. Should work in CET Zone">
 		</div>
 		<div class="col-lg-5 col-md-4" style="top: 25px;">
 			<button (click)="onDuplicateOthers()" type="button" class="btn btn-outline-green ml-2"
@@ -130,7 +91,7 @@
 		</div>
 	</div>	
 	
-	<div class="row mt-2">
+	<!-- <div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
 			<label class="font-weight-bold">{{"postJob.extraCriteria" | translate }} </label>
 			<div ></div>
@@ -153,5 +114,5 @@
 					style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
 			</div>
 		</ng-container>
-	</div>
+	</div> -->
 </div>	
