--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -4,7 +4,10 @@
     <div class="row">
       <div class="col-lg-5">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">{{"dashboard.dashboard" | translate}}</li>
+          <li *ngIf="currentTabInfo.tabNumber == 1" class="breadcrumb-item active" aria-current="page">{{"dashboard.dashboard" | translate}}</li>
+          <li *ngIf="currentTabInfo.tabNumber == 2" class="breadcrumb-item active" aria-current="page">Matching Jobs</li>
+          <li *ngIf="currentTabInfo.tabNumber == 4" class="breadcrumb-item active" aria-current="page">Applied Jobs</li>
+          <li *ngIf="currentTabInfo.tabNumber == 6" class="breadcrumb-item active" aria-current="page">My Attachments</li>
         </ol>
       </div>
       <!-- <div class="col-lg-7 clearfix">
@@ -108,6 +111,21 @@
       (click)="OpenAddResume()">Upload</button>
     </div>
   </div>
+</ng-template>
+
+<ng-template *ngIf="toggleMatchesModal" #matchesModal let-modal let-d="dismiss">
+	<div class="modal-content">
+		<div class="modal-body text-center">
+			<h1 class="text-green mx-auto pt-4"><i class="far fa-check-circle"></i></h1>
+			<h6 class="mt-3">New Matched jobs will found</h6>
+		</div>
+		<div class="modal-footer">
+			<div class=" mx-auto">
+				<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeMatches()"  data-dismiss="modal">Ok</button>
+				<button type="button" class="btn btn-theme-green"  (click)="navigateMatches()" >Go to Matches</button>
+			</div>
+		</div>
+	</div>	
 </ng-template>
 
 <app-resume-selects
