--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -405,12 +405,12 @@
 			</div>
 		</div>
 		<div class="accordion" *ngIf="desired">
-			<div class="pj-title" *ngIf="!isMultipleMatches" >
+			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
 				<h6 class="mb-0" type="button">
 					{{"dashboard.desiredSkills" | translate }}
 				 </h6>
 			</div>
-			<div class="pj-title" *ngIf="isMultipleMatches" >
+			<div class="pj-title-10" *ngIf="isMultipleMatches" >
 				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='1'">
@@ -806,13 +806,13 @@
 			
 		</div>
 		<div class="accordion" *ngIf="nice">
-			<div class="pj-title "  *ngIf="!isMultipleMatches">
+			<div class="pj-title m-b-1"  *ngIf="!isMultipleMatches">
 				<h6 class="mb-0" type="button">
 					{{"postJob.niceToHave" | translate }}
 				 </h6>
 			</div>
 			
-			<div class="pj-title" *ngIf="isMultipleMatches" >
+			<div class="pj-title-10 " *ngIf="isMultipleMatches" >
 				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='2'">
@@ -1207,12 +1207,12 @@
 			</div>
 		</div>
 		<div class="accordion"  *ngIf="optional">
-			<div class="pj-title " *ngIf="!isMultipleMatches" >
+			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
 				<h6 class="mb-0" type="button">
 					{{"dashboard.otherPreferences" | translate }}
 				 </h6>
 			</div>
-			<div class="pj-title" *ngIf="isMultipleMatches" >
+			<div class="pj-title-10 " *ngIf="isMultipleMatches" >
 				
 			</div>
 		</div>
