--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
@@ -1,16 +1,16 @@
-<div [ngClass]="isMultipleMatches ? 'top-pad' : 'top-pad-1'" class="matchs-info" style="z-index: 999;" style="left: 30px;">
+<div [ngClass]="isMultipleMatches ? 'top-pad' : 'top-pad-1'" class="matchs-infos" style="z-index: 999;" style="left: 30px;">
 	<button (click)="onShowMatches($event)" id="matchBtnVal" class="matchBtn  btn-sm btn btn-fltr btn-light" [ngClass]="matchedElement ? 'btn-fltr-active' : ''" ><img src="assets/images/matchs-icon.png" width="16px"> Matches </button>
 	<button (click)="onShowMissing($event)" id="missBtnVal"  class="missBtn  btn-sm btn btn-fltr btn-light"  [ngClass]="missingElement ? 'btn-fltr-active' : ''"  ><img src="assets/images/missing-icon.png" width="15px" class="ml-0"> Missing </button>
 </div>
 <div class=" info-box">
 	<div class="col-lg-12" >
 		<div class="accordion ">
-			<div class="pj-title "  *ngIf="!isMultipleMatches">
+			<div class="pj-title "  *ngIf="!isMultipleMatches" >
 				<h6 class="mb-0" type="button">
 					Required Skills
 				 </h6>
 			</div>
-			<div  *ngIf="isMultipleMatches" style="margin-top: 3rem !important;">
+			<div  *ngIf="isMultipleMatches" [ngClass]="isMultipleMatches ? 'mt-32' : 'mt-27'" >
 				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='0'">
@@ -61,7 +61,7 @@
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.hands_on_experience=='0'">
 				<ul class="list-group">
-					<li class="list-group-item handsExp text-uppercase" style="min-height: 42px;">
+					<li class="list-group-item handsExp text-uppercase" style="min-height: 48px;">
                       <ng-container *ngIf="jobInfo.hands_on_experience?.length; else elseHandsTemplate">
                         <ng-container *ngFor="let item of jobInfo.hands_on_experience; let i = index; let first = first;">
                           <div class="text-center border-right pr-3"
@@ -405,7 +405,7 @@
 			</div>
 		</div>
 		<div class="accordion" *ngIf="desired">
-			<div class="pj-title" *ngIf="!isMultipleMatches" >
+			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
 				<h6 class="mb-0" type="button">
 					{{"dashboard.desiredSkills" | translate }}
 				 </h6>
@@ -461,7 +461,7 @@
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.hands_on_experience=='1'">
 				<ul class="list-group">
-					<li class="list-group-item handsExp text-uppercase" style="min-height: 42px;">
+					<li class="list-group-item handsExp text-uppercase" style="min-height: 48px;">
                       <ng-container *ngIf="jobInfo.hands_on_experience?.length; else elseHandsTemplate">
                         <ng-container *ngFor="let item of jobInfo.hands_on_experience; let i = index; let first = first;">
                           <div class="text-center border-right pr-3"
@@ -806,13 +806,13 @@
 			
 		</div>
 		<div class="accordion" *ngIf="nice">
-			<div class="pj-title "  *ngIf="!isMultipleMatches">
+			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches">
 				<h6 class="mb-0" type="button">
 					{{"postJob.niceToHave" | translate }}
 				 </h6>
 			</div>
 			
-			<div class="pj-title" *ngIf="isMultipleMatches" >
+			<div class="pj-title  mt-3" *ngIf="isMultipleMatches" >
 				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='2'">
@@ -863,7 +863,7 @@
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.hands_on_experience=='2'">
 				<ul class="list-group">
-					<li class="list-group-item handsExp text-uppercase" style="min-height: 42px;">
+					<li class="list-group-item handsExp text-uppercase" style="min-height: 48px;">
                       <ng-container *ngIf="jobInfo.hands_on_experience?.length; else elseHandsTemplate">
                         <ng-container *ngFor="let item of jobInfo.hands_on_experience; let i = index; let first = first;">
                           <div class="text-center border-right pr-3"
@@ -1207,12 +1207,12 @@
 			</div>
 		</div>
 		<div class="accordion"  *ngIf="optional">
-			<div class="pj-title " *ngIf="!isMultipleMatches" >
+			<div class="pj-title m-b-1" *ngIf="!isMultipleMatches" >
 				<h6 class="mb-0" type="button">
 					{{"dashboard.otherPreferences" | translate }}
 				 </h6>
 			</div>
-			<div class="pj-title" *ngIf="isMultipleMatches" >
+			<div class="pj-title mt-3" *ngIf="isMultipleMatches" >
 				
 			</div>
 		</div>
@@ -1265,7 +1265,7 @@
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.hands_on_experience==''">
 				<ul class="list-group">
-					<li class="list-group-item handsExp text-uppercase" style="min-height: 42px;">
+					<li class="list-group-item handsExp text-uppercase" style="min-height: 48px;">
                       <ng-container *ngIf="jobInfo.hands_on_experience?.length; else elseHandsTemplate">
                         <ng-container *ngFor="let item of jobInfo.hands_on_experience; let i = index; let first = first;">
                           <div class="text-center border-right pr-3"
