--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.css
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.css
@@ -8,3 +8,8 @@
   background-color: #dc3545;
   border-color: #dc3545;
 }
+.warning {
+    color: #ffffff;
+    background-color: #ffc107;
+    border-color: #ffc107;
+}
