--- a/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/requirement-criteria/requirement-criteria.component.html
@@ -243,7 +243,7 @@
 			<div class=" form-group">
 				<label>{{"postJob.travel" | translate }} </label>
 				<select appMarkAsterisk formControlName="travel_opportunity" class="form-control">
-					<option [value]="null">{{"common.select" | translate }}</option>
+					<option [value]="null" disabled >{{"common.select" | translate }}</option>
 					<option *ngFor="let travel of travelArray; let i = index" [value]="travel?.id">
 						{{travel?.text}}
 					</option>
