--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -117,7 +117,7 @@
 	<div class="modal-content">
 		<div class="modal-body text-center">
 			<h1 class="text-green mx-auto pt-4"><i class="far fa-check-circle"></i></h1>
-			<h6 class="mt-3">New Matched jobs will found</h6>
+			<h6 class="mt-3" style="font-size: 20px;">Great, you have a new match!!</h6>
 		</div>
 		<div class="modal-footer">
 			<div class=" mx-auto">
