--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -151,7 +151,7 @@
         </span>
 		<a *ngIf="!isMail && isMatchesView " (click)="onTabChange()" style="margin-top: .25rem;" class="btn btn-outline-green btn-sm profile-btn" href="javascript:;" title="Edit"><i
             class="fas fa-tasks" ></i> Matches </a>
-        <span  *ngIf="isMail && jobInfo?.id">
+        <span  *ngIf="isMail && jobInfo?.id  && jobInfo['status'] == 1 ">
           <a (click)="onToggleSendMail(true)"  style="margin-top: .25rem;" class="btn btn-outline-orange btn-sm profile-btn profile-btn" href="javascript:;">
           <i class="fas fa-paper-plane"></i> Send Mail</a>
         </span>
